; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_timeline.c_restoreTimeLineHistoryFiles.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/transam/extr_timeline.c_restoreTimeLineHistoryFiles.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAXPGPATH = common dso_local global i32 0, align 4
@MAXFNAMELEN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"RECOVERYHISTORY\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @restoreTimeLineHistoryFiles(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %9 = load i32, i32* @MAXPGPATH, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  %13 = load i32, i32* @MAXFNAMELEN, align 4
  %14 = zext i32 %13 to i64
  %15 = alloca i8, i64 %14, align 16
  store i64 %14, i64* %7, align 8
  %16 = load i32, i32* %3, align 4
  store i32 %16, i32* %8, align 4
  br label %17

17:                                               ; preds = %33, %2
  %18 = load i32, i32* %8, align 4
  %19 = load i32, i32* %4, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %36

21:                                               ; preds = %17
  %22 = load i32, i32* %8, align 4
  %23 = icmp eq i32 %22, 1
  br i1 %23, label %24, label %25

24:                                               ; preds = %21
  br label %33

25:                                               ; preds = %21
  %26 = load i32, i32* %8, align 4
  %27 = call i32 @TLHistoryFileName(i8* %15, i32 %26)
  %28 = call i64 @RestoreArchivedFile(i8* %12, i8* %15, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 0, i32 0)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %25
  %31 = call i32 @KeepFileRestoredFromArchive(i8* %12, i8* %15)
  br label %32

32:                                               ; preds = %30, %25
  br label %33

33:                                               ; preds = %32, %24
  %34 = load i32, i32* %8, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* %8, align 4
  br label %17

36:                                               ; preds = %17
  %37 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %37)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @TLHistoryFileName(i8*, i32) #2

declare dso_local i64 @RestoreArchivedFile(i8*, i8*, i8*, i32, i32) #2

declare dso_local i32 @KeepFileRestoredFromArchive(i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
